		index pages with UTF-8 encoding. Check the error.log for
		errors.
		In mbsetup menu 1.3.7 change logo.asc into logo.ans and make
		sure you have that file. A note about the logo file, it will
		be displayed before we know if a user ahs a utf-8 or ansi
		terminal, so change your logo screen so that it has no ansi
		grafics, just plain ascii with ansi color codes.

	mbselib:
		Fixed a too low memory allocation in clencode.

	mbsebbs:
		Added terminal setting UTF-8.
		Removed setting ANSI/Textmode, allways graphic now.
		All *.asc textfiles are now obsolete, only *.ans are valid.
		Display ansi file converts to UTF-8 if the user has UTF-8.
		Email and FTN mail reading now translates to the users
		characterset using glibc iconv.
		Changed menus lastcallers, whoson, userlist, pinfo, fsedit,
		timestats to output UTF-8 code if the user has set that terminal
		setting.

	mbfile:
		The index command produces UTF-8 webpages.

	mbfido:
		The make web stat produces UTF-8 webpages.

	mbnntp:
		Reading news outputs UTF-8 coded articles.
		TODO: test posting and fix if needed.

	mbtask:
		Fixed a too low memory allocation in clencode.

	lang:
		Language prompts 44, 75 and 76 are obsolete.

	examples:
		Upgraded the html macro templates to produce UTF-8 web pages.



v0.91.4		17-Feb-2007 - 18-Feb-2007

	upgrade:
		Because some directories will be moved, a special upgrade
		procedure is needed. Take the following steps:
		1. Don't install the new source yet and make a backup!
		2. In the source topdir run "make clean".
		3. Install the new source.
		4. Build new source, "./configure" and "make".
		5. Run "./mbsetup/mbsetup", enter global setup and leave with
		   save. this should move all your existing language files to
		   the new directory structure.
		6. "su", run "make install" and restart the bbs.
		7. "exit".
		If you didn't do steps 1 and 2 (automatic updates) and you
		installed the source over the old source you have some