@@ -71,28 +71,26 @@ struct _charalias charalias[] = {
 
 
 /*
- * Array of charset identifiers. Order is important for reverse
- * search from rfc -> ftn, best ftn kludge should be on top.
+ * Array of charset identifiers.
  */
 struct _charmap charmap[] = {
-    {FTNC_NONE,   (char *)"Undef",    (char *)"iso-8859-1", (char *)"Undef",    (char *)"ISO-8859-1", (char *)"C",           (char *)"Undefined"},
-    {FTNC_LATIN_1,(char *)"LATIN-1 2",(char *)"iso-8859-1", (char *)"LATIN1",   (char *)"ISO-8859-1", (char *)"en_US",       (char *)"ISO 8859-1 (Western European)"},
+    {FTNC_NONE,   (char *)"Undef",    (char *)"Undef",      (char *)"Undef",    (char *)"Undef",      (char *)"C",           (char *)"Undefined"},
     {FTNC_CP437,  (char *)"CP437 2",  (char *)"us-ascii",   (char *)"CP437",    (char *)"ISO-8859-1", (char *)"en_US",       (char *)"IBM codepage 437 (Western European) (ANSI terminal)"},
-    {FTNC_CP865,  (char *)"CP865 2",  (char *)"iso-8859-1", (char *)"CP865",    (char *)"ISO-8859-1", (char *)"sv_SE",       (char *)"IBM codepage 865 (Nordic)"},
-    {FTNC_MAC,    (char *)"MAC",      (char *)"Macintosh",  (char *)"MACINTOSH",(char *)"ISO-8859-1", (char *)"en_US",       (char *)"MacIntosh character set"},
     {FTNC_CP850,  (char *)"CP850 2",  (char *)"iso-8859-1", (char *)"CP850",    (char *)"ISO-8859-1", (char *)"en_US",       (char *)"IBM codepage 850 (Latin-1)"},
+    {FTNC_CP865,  (char *)"CP865 2",  (char *)"iso-8859-1", (char *)"CP865",    (char *)"ISO-8859-1", (char *)"sv_SE",       (char *)"IBM codepage 865 (Nordic)"},
+    {FTNC_CP866,  (char *)"CP866 2",  (char *)"iso-8859-5", (char *)"CP866",    (char *)"ISO-8859-5", (char *)"ru_RU",       (char *)"IBM codepage 866 (Russian)"},
+    {FTNC_LATIN_1,(char *)"LATIN-1 2",(char *)"iso-8859-1", (char *)"LATIN1",   (char *)"ISO-8859-1", (char *)"en_US",       (char *)"ISO 8859-1 (Western European)"},
     {FTNC_LATIN_2,(char *)"LATIN-2 2",(char *)"iso-8859-2", (char *)"LATIN2",   (char *)"ISO-8859-2", (char *)"cs_CZ",       (char *)"ISO 8859-2 (Eastern European)"},
+    {FTNC_LATIN_5,(char *)"LATIN-5 2",(char *)"iso-8859-5", (char *)"LATIN5",   (char *)"ISO-8859-5", (char *)"turks",       (char *)"ISO 8859-5 (Turkish)"},
+    {FTNC_MAC,    (char *)"MAC",      (char *)"Macintosh",  (char *)"MACINTOSH",(char *)"ISO-8859-1", (char *)"en_US",       (char *)"MacIntosh character set"},
     {FTNC_CP852,  (char *)"CP852 2",  (char *)"iso-8859-2", (char *)"CP852",    (char *)"ISO-8859-2", (char *)"cs_CZ",       (char *)"IBM codepage 852 (Czech, Latin-1)"},
     {FTNC_CP895,  (char *)"CP895 2",  (char *)"iso-8859-2", (char *)"CP850",    (char *)"ISO-8859-2", (char *)"cs_CZ",       (char *)"IBM codepage 895 (Czech, Kamenicky)"},
-    {FTNC_LATIN_5,(char *)"LATIN-5 2",(char *)"iso-8859-5", (char *)"LATIN5",   (char *)"ISO-8859-5", (char *)"turks",       (char *)"ISO 8859-5 (Turkish)"},
-    {FTNC_CP866,  (char *)"CP866 2",  (char *)"iso-8859-5", (char *)"CP866",    (char *)"ISO-8859-5", (char *)"ru_RU",       (char *)"IBM codepage 866 (Russian)"},
-    {FTNC_LATIN_9,(char *)"LATIN-9 2",(char *)"iso-8859-15",(char *)"LATIN-9",  (char *)"ISO-8859-15",(char *)"en_US",       (char *)"ISO 8859-1 (Western European EURO)"},
     {FTNC_KOI8_R, (char *)"KOI8-R 2", (char *)"koi8-r",     (char *)"KOI8-R",   (char *)"KOI8-R",     (char *)"ru_RUi.koi8r",(char *)"Unix codepage KOI8-R (Russian)"},
     {FTNC_CP936,  (char *)"CP936 2",  (char *)"hz-gb-2312", (char *)"GB2312",   (char *)"GB2312",     (char *)"zh_CN.gbk",   (char *)"IBM codepage 936 (Chinese, GBK)"},
+    {FTNC_LATIN_9,(char *)"LATIN-9 2",(char *)"iso-8859-15",(char *)"LATIN-9",  (char *)"ISO-8859-15",(char *)"en_US",       (char *)"ISO 8859-1 (Western European EURO)"},
     {FTNC_UTF8,   (char *)"UTF-8 4",  (char *)"utf-8",      (char *)"UTF-8",    (char *)"UTF-8",      (char *)"en_US.UTF-8", (char *)"Unicode UTF-8 (ISO/IEC 10646)"},
     {FTNC_ERROR,  NULL,               NULL,                 NULL,               NULL,                 NULL,                  (char *)"ERROR"}
 };
-
 
 
 
@@ -188,6 +186,7 @@ char *getftnchrs(int val)
     static char	kludge[20];
 
     if ((val >= FTNC_NONE) && (val <= FTNC_MAXCHARS)) {
+	Syslog('-', "getftnchrs(%d) %s", val, charmap[val].ftnkludge);
 	snprintf(kludge, 20, "%s", charmap[val].ftnkludge);
 	return kludge;
     }
@@ -202,6 +201,7 @@ char *getrfcchrs(int val)
     static char	rfcname[20];
 
     if ((val >= FTNC_NONE) && (val <= FTNC_MAXCHARS)) {
+	Syslog('-', "getrfcchrs(%d) %s", val, charmap[val].rfcname);
 	snprintf(rfcname, 20, "%s", charmap[val].rfcname);
 	return rfcname;
     }
@@ -216,6 +216,7 @@ char *get_ic_ftn(int val)
     static char ic_ftnname[20];
     
     if ((val >= FTNC_NONE) && (val <= FTNC_MAXCHARS)) {
+	Syslog('-', "get_ic_ftn(%d) %s", val, charmap[val].ic_ftn);
 	snprintf(ic_ftnname, 20, "%s", charmap[val].ic_ftn);
 	return ic_ftnname;
     }
@@ -230,6 +231,7 @@ char *get_ic_rfc(int val)
     static char ic_rfcname[20];
     
     if ((val >= FTNC_NONE) && (val <= FTNC_MAXCHARS)) {
+	Syslog('-', "get_ic_rfc(%d) %s", val, charmap[val].ic_rfc);
 	snprintf(ic_rfcname, 20, "%s", charmap[val].ic_rfc);
 	return ic_rfcname;
     }
