@@ -5,7 +5,7 @@
 
 
 void	Msg_Id(fidoaddr);
-void	Msg_Pid(void);
+void	Msg_Pid(int);
 void	Msg_Macro(FILE *);
 int	Msg_Top(char *, int, fidoaddr);
 void	Msg_Bot(fidoaddr, char *, char *);
